--- a/src/mats_orbitsimulator/MATSbana.ipynb
+++ b/src/mats_orbitsimulator/MATSbana.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "36ec0126",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "c738c123",
    "metadata": {},
    "outputs": [],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "b61a202c",
    "metadata": {},
    "outputs": [],
@@ -107,42 +107,42 @@
     "timestep=DT.timedelta(days=1*0.5)\n",
     "ts=sfapi.load.timescale()\n",
     "tle=['1 99991U 21321B   22010.41666667  .00000000  00000-0  49154-3 0    13',\n",
-    "          '2 99991  97.3120  64.9140 0002205 122.9132 235.5287 15.01280112    07']  \n",
+    "          '2 99991  97.3120  64.9140 0002205 122.9132 235.5287 15.01280112    07']\n",
     "sfodin = sgp4lib.EarthSatellite(tle[0],tle[1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "db90c61f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def funpitch(pitch,g,th,pos,yaw,rotmatrix):\n",
+    "def funpitch(pitch,t,th,pos,yaw,rotmatrix):\n",
     "    #print(pitch*180/np.pi)\n",
     "    FOV=rotate(np.array([1,0,0]),yaw,pitch,0,deg=False)\n",
     "    FOV=np.matmul(rotmatrix,FOV)\n",
-    "    tp=findtangent(g,pos,FOV)\n",
+    "    tp=findtangent(t,pos,FOV)\n",
     "    return((tp.fun-th)**2)\n",
     "\n",
-    "def funheight (s,g,pos,FOV):\n",
+    "def funheight (s,t,pos,FOV):\n",
     "    newp = pos + s * FOV\n",
-    "    g.position=Distance(m=newp)\n",
-    "    return wgs84.subpoint(g).elevation.m\n",
+    "    newp=ICRF(Distance(m=newp).au,t=t,center=399)\n",
+    "    return wgs84.subpoint(newp).elevation.m\n",
     "\n",
     "\n",
-    "def findtangent(g,pos,FOV):\n",
-    "    res=minimize_scalar(funheight,args=(g,pos,FOV),bracket=(1e5,3e5))\n",
+    "def findtangent(t,pos,FOV):\n",
+    "    res=minimize_scalar(funheight,args=(t,pos,FOV),bracket=(1e5,3e5))\n",
     "    return res\n",
     "\n",
-    "def findpitch (th,g,pos,yaw,rotmatrix):\n",
-    "    res=minimize_scalar(funpitch,args=(g,th,pos,yaw,rotmatrix),method=\"Bounded\",bounds=(np.deg2rad(-30),np.deg2rad(-10)))\n",
+    "def findpitch (th,t,pos,yaw,rotmatrix):\n",
+    "    res=minimize_scalar(funpitch,args=(t,th,pos,yaw,rotmatrix),method=\"Bounded\",bounds=(np.deg2rad(-30),np.deg2rad(-10)))\n",
     "    return res.x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "ca750fc8",
    "metadata": {},
    "outputs": [],
@@ -177,13 +177,16 @@
     "    sublats.append(sublat_c)\n",
     "    sublons.append(sublon_c)\n",
     "    LTsat.append((d+DT.timedelta(seconds=sublon_c/15*60*60)).strftime('%H:%M:%S'))\n",
-    "    pitch=findpitch(92000,g, ECI_pos, np.deg2rad(yaw)+yawoffset, rotmatrix)\n",
+    "    pitch=findpitch(92000,t, ECI_pos, np.deg2rad(yaw)+yawoffset, rotmatrix)\n",
+    "\n",
+    "\n",
     "    yaw=-3.3*np.cos(np.deg2rad(tt*timestep.seconds/period/60*360-np.rad2deg(pitch)-0))\n",
     "    #yaw =0\n",
     "    #print(np.rad2deg(pitchdown))\n",
+    "    pitch=findpitch(92000,t, ECI_pos, np.deg2rad(yaw)+yawoffset, rotmatrix)\n",
     "    FOV=rotate(np.array([1,0,0]),np.deg2rad(yaw)+yawoffset,pitch,0,deg=False)\n",
     "    FOV=np.matmul(rotmatrix,FOV)\n",
-    "    res = findtangent(g,ECI_pos,FOV)\n",
+    "    res = findtangent(t,ECI_pos,FOV)\n",
     "    s=res.x\n",
     "    newp = ECI_pos + s * FOV\n",
     "#    pos_s=np.matmul(itrs.rotation_at(t),newp)\n",
@@ -195,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "39c1a301",
    "metadata": {},
    "outputs": [],
@@ -209,8 +212,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "e0fe2fed",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "580548.5404630052"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wgs84.height_of(g).m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "7643c394",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sublat,sublon=wgs84.latlon_of(g)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "1c901b56",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-44.55293200149013"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sublat.degrees"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "eb07d795",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ra,dec,dist=newp.radec()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "2fe7b59c",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "WrongUnitError",
+     "evalue": "this angle is usually expressed in hours, not degrees; if you want to use degrees anyway, then please use the attribute _degrees",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mWrongUnitError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/z9/z5mq6p390ls748hn4fyfy9pw0000gn/T/ipykernel_13688/1147188131.py\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mra\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdegrees\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.8/site-packages/skyfield/descriptorlib.py\u001b[0m in \u001b[0;36m__get__\u001b[0;34m(self, instance, objtype)\u001b[0m\n\u001b[1;32m     10\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0minstance\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m         \u001b[0mvalue\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmethod\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minstance\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m         \u001b[0minstance\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__dict__\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__name__\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.8/site-packages/skyfield/units.py\u001b[0m in \u001b[0;36mdegrees\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    299\u001b[0m         \u001b[0;34m\"\"\"Degrees (360° in a circle).\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    300\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpreference\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;34m'degrees'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 301\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mWrongUnitError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'degrees'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    302\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_degrees\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    303\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mWrongUnitError\u001b[0m: this angle is usually expressed in hours, not degrees; if you want to use degrees anyway, then please use the attribute _degrees"
+     ]
+    }
+   ],
+   "source": [
+    "ra.degrees"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c6a9ffb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -232,7 +321,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
