--- a/src/mats_orbitsimulator/MATS_starfinder.ipynb
+++ b/src/mats_orbitsimulator/MATS_starfinder.ipynb
@@ -2,11 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'tangentlib'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 15>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mGeoidlib\u001b[39;00m\n\u001b[1;32m     14\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mscipy\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01moptimize\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m minimize_scalar\n\u001b[0;32m---> 15\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtangentlib\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n\u001b[1;32m     17\u001b[0m get_ipython()\u001b[38;5;241m.\u001b[39mrun_line_magic(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmatplotlib\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnotebook\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     18\u001b[0m \u001b[38;5;66;03m#%matplotlib qt5\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'tangentlib'"
+     ]
+    }
+   ],
    "source": [
     "import ephem\n",
     "import datetime as DT\n",
@@ -32,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,27 +131,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'findpitch' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [3]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m mats\u001b[38;5;241m=\u001b[39m\u001b[43mMats\u001b[49m\u001b[43m(\u001b[49m\u001b[43mDT\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdatetime\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m2022\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m11\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m10\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m10\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Input \u001b[0;32mIn [2]\u001b[0m, in \u001b[0;36mMats.__init__\u001b[0;34m(self, attime)\u001b[0m\n\u001b[1;32m     28\u001b[0m yaw \u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m\n\u001b[1;32m     29\u001b[0m yawoffset\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m\n\u001b[0;32m---> 30\u001b[0m pitch\u001b[38;5;241m=\u001b[39m\u001b[43mfindpitch\u001b[49m(\u001b[38;5;241m92000\u001b[39m,t, ECI_pos, np\u001b[38;5;241m.\u001b[39mdeg2rad(yaw)\u001b[38;5;241m+\u001b[39myawoffset, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mrotmatrix)\n\u001b[1;32m     31\u001b[0m \u001b[38;5;66;03m#print (np.rad2deg(pitch))\u001b[39;00m\n\u001b[1;32m     32\u001b[0m FOV\u001b[38;5;241m=\u001b[39mrotate(np\u001b[38;5;241m.\u001b[39marray([\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m0\u001b[39m]),np\u001b[38;5;241m.\u001b[39mdeg2rad(yaw)\u001b[38;5;241m+\u001b[39myawoffset,pitch,\u001b[38;5;241m0\u001b[39m,deg\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'findpitch' is not defined"
+     ]
+    }
+   ],
    "source": [
     "mats=Mats(DT.datetime(2022,11,10,10,0,0))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "56.04765410682904"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'mats' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [4]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mmats\u001b[49m\u001b[38;5;241m.\u001b[39msublat\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'mats' is not defined"
+     ]
     }
    ],
    "source": [
@@ -148,23 +174,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/z9/z5mq6p390ls748hn4fyfy9pw0000gn/T/ipykernel_36217/1249735348.py:41: RuntimeWarning: invalid value encountered in arccos\n",
-      "  st_ang[nstar,ntime]=np.rad2deg(np.arccos(np.dot(mats.FOV,st_vec[nstar]/norm(st_vec[nstar]))))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(<Angle 22h 26m 31.88s>, <Angle -15deg 02' 42.1\">, <Distance 0.00249057 au>)\n",
-      "Moon RA = 336.6328436779864, Dec= -15.045022202435478\n"
+     "ename": "NameError",
+     "evalue": "name 'mats' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [5]\u001b[0m, in \u001b[0;36m<cell line: 6>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m startdate\u001b[38;5;241m=\u001b[39mDT\u001b[38;5;241m.\u001b[39mdatetime(\u001b[38;5;241m2022\u001b[39m,\u001b[38;5;241m11\u001b[39m,\u001b[38;5;241m30\u001b[39m,\u001b[38;5;241m4\u001b[39m,\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m0\u001b[39m)\n\u001b[1;32m      5\u001b[0m d\u001b[38;5;241m=\u001b[39mstartdate\n\u001b[0;32m----> 6\u001b[0m t\u001b[38;5;241m=\u001b[39m\u001b[43mmats\u001b[49m\u001b[38;5;241m.\u001b[39mts\u001b[38;5;241m.\u001b[39mutc(d\u001b[38;5;241m.\u001b[39myear,d\u001b[38;5;241m.\u001b[39mmonth,d\u001b[38;5;241m.\u001b[39mday,d\u001b[38;5;241m.\u001b[39mhour,d\u001b[38;5;241m.\u001b[39mminute,d\u001b[38;5;241m.\u001b[39msecond)\n\u001b[1;32m      8\u001b[0m planets \u001b[38;5;241m=\u001b[39m sfapi\u001b[38;5;241m.\u001b[39mload(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mde421.bsp\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      9\u001b[0m moon\u001b[38;5;241m=\u001b[39mplanets[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMoon\u001b[39m\u001b[38;5;124m'\u001b[39m]\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'mats' is not defined"
      ]
     }
    ],
